welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:10: error: reassignment to val
      compteur = compteur + 1
               ^Diagonal:11: error: reassignment to val
      x = x+1
        ^Diagonal:12: error: reassignment to val
      y = y - 1
        ^